# data-migration-mcp

./: .gitignore  main.py  pyproject.toml  symliv-data-migration.py
src/: symliv-data-migration.py
