[project]
name = "data-migration-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pyjwt>=2.10.1",
    "pymongo>=4.17.0",
]
